--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,25 @@
     "dist": "yarn run clean && ./node_modules/.bin/webpack -p"
   },
   "dependencies": {
+    "@types/classnames": "^0.0.32",
     "@types/react": "^15.0.21",
     "@types/react-dom": "^0.14.23",
     "awesome-typescript-loader": "^3.1.2",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
+    "postcss-loader": "^1.3.3",
+    "postcss-smart-import": "^0.6.11",
+    "precss": "^1.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.16.1",
     "typescript": "^2.2.2",
+    "typings-for-css-modules-loader": "^1.5.0",
     "webpack": "^2.3.3"
   }
 }
